# stocksim-backend

./: .gitignore  Cargo.toml  README.md  db.sqlite  sessions.db
src/: auth.rs  db.rs  finnhub.rs  lib.rs  main.rs  models.rs
src/handlers/: accounts.rs  mod.rs  portfolio.rs  trading.rs
