[package]
name = "stocksim-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.8", features=["macros"]}
serde = {version="1.0.215", features = ["derive"]}
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = {version = "1.41.1", features = ["full", "rt-multi-thread"]}
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tower-sessions = "0.13.0"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0" ,features = ["v4", "serde"]}
serde_json = "1.0.133"
chrono = "0.4.38"
tracing = "0.1.40"
reqwest = { version = "0.12.9", features = ["json"] }
lazy_static = "1.5.0"
url = "2.5.4"
dotenv = "0.15"
time = "0.3.36"
tower-sessions-rusqlite-store = "0.13.0"

